expanded header alignment fix

--- a/newamericadotorg/assets/scss/components/header/_expanded.scss
+++ b/newamericadotorg/assets/scss/components/header/_expanded.scss
@@ -36,7 +36,7 @@
               }
 
               &:not(.wide){
-                @include transform(translateX(-0.5em));
+                margin-left: -0.5em;
               }
             }
             &.gray-box{
